# mapreduce-rs

./: Cargo.toml  build.rs
data/: test.txt
proto/: master.proto  mr.proto  worker.proto
src/: .main.rs.swp  common_map.rs  common_reduce.rs  common_rpc.rs  main.rs  master.rs  master_rpc.rs  master_splitmerge.rs  schedule.rs  utils.rs  wc.rs  worker.rs
